       the bottom. (Stefan)
- BUG: The default ssh client (TortoisePlink) wasn't used in some
       places, e.g. the revision graph. (Stefan)
- BUG: The option "Only use spellchecker when tsvn:projectlanguage is set"
       was inversed. (Stefan)
- BUG: The bugtraq: and tsvn: property values weren't correctly handled if
       they contained non-ASCII chars. (Stefan)

Version 1.2.1
- NEW: The path of the working copy is shown in the dialog title for
       "check for modifications" and commit dialog. See Issue 98. (Stefan)
- NEW: Diffing files against their BASE improved. See Issue #94. (Stefan)
- NEW: 'Open with...' command in the commit dialog. (Stefan)
- NEW: Columns in the log dialog can be sorted. (Boris)
- NEW: Files dragged from the explorer to the repository browser will
       add them to the repository. (Stefan)
- NEW: Renaming in the repository browser now happens inline. (Stefan)
- NEW: Words which are in the autocompletion list aren't spell checked
       anymore. See issue #102. (Stefan)
- NEW: "explore to" context menu command in the commit dialog.
       See issue #105. (Stefan)
- NEW: Option to make the "Check for modifications" dialog contact
       the repository the first time. See issue #107. (Stefan)
- NEW: The last used setting for "Stop on copy/rename" in the log dialog
       is remembered (except for the merge dialog). See issue #109. (Stefan)
- NEW: Copying items and give them a new name at the same time is now
       possible by right-dragging the item to the new location.
       See issue #112. (Stefan)
- NEW: Locking files recursively in a folder. See issue #110. (Stefan)
- NEW: Comparing two URLs in the repository browser now is possible
       on a file-by-file basis, not just as a unified diff.
       See issue #104. (Stefan)
- NEW: The checkout dialog now has a "show log" button to easier
       find the revision you want to check out from. (Stefan)
- NEW: Command to check out a specific revision from the log dialog. (Stefan)